simple post method and redirect

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,5 +10,10 @@
   <body>
     <h1>Home Page</h1>
     <p>This is the home page of our application.</p>
+    <form action="/result" method="POST">
+      <label for="orf_name">First name:</label><br>
+      <input type="text" id="fname" name="fname"><br>
+      <button type="submit">Submit</button>
+    </form>
   </body> 
 </html>
